# OpenGL_CMake_Template

./: CMakeLists.txt  README.md
.github/template/: README.md  template_name  template_repository
.github/workflows/: ci.yml  template-janitor.yml
src/: main.cpp
